--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,8 +5,23 @@ $btn-success: #63cc82;
 $btn-error: #e4757a; 
 $btn-warning: #fd7856;
 $btn-info: #927bc1;
+$headline-primary: #58e1c1;
+
+//typography
+$font-color: #777;
+$font-weight: 300;
+$white: #fff; 
 
 
+//text
+$text-deco: none;
+$padding: 10px 0;
 
 //media query 
 $brk-md: 768px;
+
+//border
+$border: none;
+
+//flex
+$flex-basis: 100%; 
