--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /* sub folder imports */
+/* button colors */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -372,7 +373,236 @@ template {
   display: none;
 }
 
-/* buttons */
-/* button colors */
+/* line 4, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+* {
+  font-family: 'Lato', sans-serif;
+  color: #777;
+  box-sizing: border-box;
+}
+
+/* line 10, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+p {
+  line-height: 1.45em;
+}
+
+/* line 14, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+a {
+  text-decoration: none;
+}
+
+/* ============================================= */
+/*              Typography                       */
+/* ============================================= */
+/* line 23, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+.headline-primary {
+  color: #58e1c1;
+  margin-left: 10px;
+}
+
+/* line 28, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+.headline-secondary {
+  font-weight: 300;
+  color: #777;
+}
+
+/* line 33, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+.link {
+  color: #51ddfc;
+  font-weight: 700;
+}
+
+/* line 38, ../../../Desktop/projects/web style guide/web-style-guide/scss/base/_typography.scss */
+.blockquote {
+  font-size: 1.5em;
+  font-weight: 300;
+  font-style: italic;
+  margin-left: 20px;
+  padding-left: 20px;
+  border-left: 8px solid #58e1c1;
+  border-radius: 5px;
+}
+
+/* ============================================= */
+/*              Buttons                          */
+/* ============================================= */
+/* line 6, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_button.scss */
+.btn {
+  margin-top: 15px;
+  width: 100%;
+  color: #fff;
+  border: none;
+  padding: 10px 0;
+  text-transform: uppercase;
+  border-radius: 5px;
+}
+
+/* line 16, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_button.scss */
+.default {
+  background-color: #51ddfc;
+}
+
+/* line 20, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_button.scss */
+.error {
+  background-color: #e4757a;
+}
+
+/* line 24, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_button.scss */
+.info {
+  background-color: #927bc1;
+}
+
+/* line 28, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_button.scss */
+.success {
+  background-color: #63cc82;
+}
+
+/* line 32, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_button.scss */
+.warning {
+  background-color: #fd7856;
+}
+
+/* ============================================= */
+/*              Forms                            */
+/* ============================================= */
+/* line 5, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_form.scss */
+.form {
+  flex-basis: 100%;
+}
+
+/* line 9, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_form.scss */
+.input {
+  display: block;
+  width: 94%;
+  margin: 10px auto 0;
+  border: none;
+  padding: 10px;
+  border-bottom: 5px solid #58e1c1;
+}
+
+/* line 18, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_form.scss */
+.hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+/* ============================================= */
+/*              Grid System                      */
+/* ============================================= */
+/* line 5, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.container {
+  padding: 0 10px;
+}
+
+/* line 9, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.row {
+  display: flex;
+  flex-direction: column;
+  padding: 1em 10px;
+}
+
+/* line 15, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+[class^=col] {
+  margin-top: 10px;
+  flex-basis: 100%;
+  min-height: 25px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+/* line 23, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-1 {
+  background-color: #927bc1;
+}
+
+/* line 27, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-2 {
+  background-color: #fd7856;
+}
+
+/* line 31, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-3 {
+  background-color: #deb2ee;
+}
+
+/* line 35, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-4 {
+  background-color: #7ee6fd;
+}
+
+/* line 39, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-5 {
+  background-color: #88d9a0;
+}
+
+/* line 43, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-6 {
+  background-color: #4da2bb;
+}
+
+/* line 47, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-7 {
+  background-color: #ec9fa3;
+}
+
+/* line 51, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-8 {
+  background-color: #fd9f85;
+}
+
+/* line 55, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-9 {
+  background-color: #e4757a;
+}
+
+/* line 59, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-10 {
+  background-color: #63cc82;
+}
+
+/* line 63, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-11 {
+  background-color: #51ddfc;
+}
+
+/* line 67, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-12 {
+  background-color: #80e8d1;
+}
+
+/* line 71, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.card {
+  flex-basis: 100%;
+}
+
+/* ============================================= */
+/*              Navigation                       */
+/* ============================================= */
+/* line 5, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_navigation.scss */
+.nav {
+  padding-left: 0;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 12, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_navigation.scss */
+.nav-link {
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px 0;
+  display: block;
+  width: 100%;
+  transition: background-color .2s ease-in-out,  color .2s ease-in-out;
+}
+
+/* line 23, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_navigation.scss */
+.nav-link:hover {
+  color: #fff;
+  background-color: #58e1c1;
+}
 
 /*# sourceMappingURL=styles.css.map */
