--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 /* sub folder imports */
 
-@import 'base/index', 
-'component/index',
-'utilities/index';
+@import 'utilities/index',
+ 'base/index', 
+'component/index';
