--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -4,7 +4,7 @@
 
 .nav {
     padding-left: 0;
-    flex-basis: 100%;
+    flex-basis: $flex-basis;
     display: flex;
     flex-direction: column;
   }
@@ -14,14 +14,14 @@
     border-radius: 5px;
     padding: 10px 0;
     display: block;
-    width: 100%;
+    width: $flex-basis;
     transition: 
       background-color .2s ease-in-out, 
       color .2s ease-in-out;
   }
   
   .nav-link:hover {
-    color: #fff;
-    background-color: #58e1c1;
+    color: $white;
+    background-color: $headline-primary;
   }
   
