--- a/css/styles.css
+++ b/css/styles.css
@@ -563,18 +563,18 @@ a {
   background-color: #63cc82;
 }
 
-/* line 63, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
-.theme.col-11 {
+/* line 62, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-10 .theme.col-11 {
   background-color: #51ddfc;
 }
 
-/* line 67, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
-.theme.col-12 {
+/* line 66, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-10 .theme.col-12 {
   background-color: #80e8d1;
 }
 
-/* line 71, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
-.card {
+/* line 70, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_grid.scss */
+.theme.col-10 .card {
   flex-basis: 100%;
 }
 
@@ -603,6 +603,142 @@ a {
 .nav-link:hover {
   color: #fff;
   background-color: #58e1c1;
+}
+
+/* ============================================= */
+/*              Images                           */
+/* ============================================= */
+/* line 5, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_images.scss */
+.img-avatar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* line 14, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_images.scss */
+.img-frame {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  padding: 13px;
+  border: 1px solid #ccc;
+}
+
+/* line 24, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_images.scss */
+.img-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ============================================= */
+/*              Media Queries                    */
+/* ============================================= */
+@media (min-width: 768px) {
+  /* line 6, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .container {
+    max-width: 1400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  /* line 12, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  /* line 17, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .row {
+    flex-direction: row;
+  }
+  /* line 21, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  [class^=col] {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+    align-items: center;
+  }
+  /* line 28, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  [class^=col] + [class^=col] {
+    margin-left: 10px;
+  }
+  /* line 32, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-1 {
+    flex-basis: 8.33%;
+  }
+  /* line 36, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-2 {
+    flex-basis: 16.67%;
+  }
+  /* line 40, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-3 {
+    flex-basis: 25.00%;
+  }
+  /* line 44, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-4 {
+    flex-basis: 33.33%;
+  }
+  /* line 48, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-5 {
+    flex-basis: 41.67%;
+  }
+  /* line 52, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-6 {
+    flex-basis: 50.00%;
+  }
+  /* line 56, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-7 {
+    flex-basis: 58.33%;
+  }
+  /* line 60, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-8 {
+    flex-basis: 66.67%;
+  }
+  /* line 64, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-9 {
+    flex-basis: 75.00%;
+  }
+  /* line 68, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-10 {
+    flex-basis: 83.33%;
+  }
+  /* line 72, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-11 {
+    flex-basis: 91.67%;
+  }
+  /* line 76, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .col-12 {
+    flex-basis: 100%;
+  }
+  /* line 80, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .nav {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  /* line 86, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .nav-link {
+    flex-basis: 100px;
+  }
+  /* line 90, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .btn {
+    padding: 10px 30px;
+  }
+  /* line 94, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .btn + .btn {
+    margin-left: 10px;
+  }
+  /* line 98, ../../../Desktop/projects/web style guide/web-style-guide/scss/component/_mediaquery.scss */
+  .logo {
+    margin-left: initial;
+    margin-right: initial;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
